# tree-sitter-cobol

./: .gitignore  CMakeLists.txt  Makefile  Package.swift  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cobol/: __init__.py  binding.c
bindings/swift/TreeSitterCOBOLTests/: TreeSitterCOBOLTests.swift
src/: grammar.json  node-types.json  scanner.c
test/corpus/: cics-reference.txt  comment.txt  compiler-directives.txt  continuation-lines.txt  copy-replacing.txt  data_description.txt  debug-lines.txt  empty-date-compiled.txt  entry-statement.txt  exec-sql-data-division.txt  exec.txt  exponentiation.txt  function-refmod.txt  reference-modification.txt  single-quote-continuation.txt
